# memcached

./: .gitignore  ChangeLog  Makefile.am  assoc.c  configure.ac  daemon.c  internal_tests.c  items.c  memcached.c  memcached.h  slabs.c  stats.c  thread.c  util.c
doc/: memcached.1  protocol.txt
t/: incrdecr.t
